improve navbar search button

--- a/kipsrm-web/app/components/navbar/navbar.html
+++ b/kipsrm-web/app/components/navbar/navbar.html
@@ -56,7 +56,7 @@
                             <!-- Search input text  -->
                             <input class="form-control navbar-fat" type="text" placeholder="{{'search' | translate}}" ng-model="searchFactory.keyword">
                             <span class="input-group-btn">
-                                <button class="btn btn-blue navbar-fat" type="submit"><i class="fa fa-search i-fat"></i></button>
+                                <button class="btn btn-primary btn-navbar navbar-fat" type="submit"><i class="fa fa-search i-fat"></i></button>
                             </span>
                         </div>
                     </form>
