--- a/kipsrm-web/assets/css/style.css
+++ b/kipsrm-web/assets/css/style.css
@@ -133,9 +133,7 @@
     line-height: 60px;
 }
 
-.btn-blue {
-    color: #fff;
-    background-color: #3c8dbc;
+.btn-navbar {
     border-color: #367fa9;
 }
 
