Change Title & few improvements

--- a/kipsrm-web/app/components/navbar/navbar.html
+++ b/kipsrm-web/app/components/navbar/navbar.html
@@ -2,11 +2,11 @@
 <header class="main-header" ng-controller="NavbarController">
     <a href="#!/home" class="logo">
         <!-- mini logo for sidebar mini 50x50 pixels -->
-        <span class="logo-mini">GPSO</span>
+        <span class="logo-mini">i-GRW</span>
         <!-- logo for regular state and mobile devices -->
-        <span class="logo-lg" title="Global Product Safety Observatory">
-            GPSO<br>
-            <span class="logo-title">Global Product Safety Observatory</span>
+        <span class="logo-lg" title="Intelligent Global Risk Watch">
+            iGRW<br>
+            <span class="logo-title">Intelligent Global Risk Watch</span>
         </span>
     </a>
 
