--- a/kipsrm-web/app/components/analysis/iidf.html
+++ b/kipsrm-web/app/components/analysis/iidf.html
@@ -5,7 +5,39 @@
             <div class="box box-solid">
                 <div class="box-body">
 
-                    <div id="container">Placeholder for chart</div>
+                    <div id="iidfHm">Loading...</div>
+
+                </div>
+            </div>
+            
+            <div class="box box-solid">
+                <div class="box-body">
+
+                    <div id="iidfHo" style="height: 1000px;">Loading...</div>
+
+                </div>
+            </div>
+            
+            <div class="box box-solid">
+                <div class="box-body">
+
+                    <div id="iidfHmat">Loading...</div>
+
+                </div>
+            </div>
+            
+            <div class="box box-solid">
+                <div class="box-body">
+
+                    <div id="iidfHmec">Loading...</div>
+
+                </div>
+            </div>
+            
+            <div class="box box-solid">
+                <div class="box-body">
+
+                    <div id="iidfHact">Loading...</div>
 
                 </div>
             </div>
