--- a/kipsrm-web/app/components/navbar/navbar.html
+++ b/kipsrm-web/app/components/navbar/navbar.html
@@ -5,7 +5,7 @@
         <span class="logo-mini">i-GRW</span>
         <!-- logo for regular state and mobile devices -->
         <span class="logo-lg" title="Intelligent Global Risk Watch">
-            iGRW<br>
+            <i>i</i> GRW<br>
             <span class="logo-title">Intelligent Global Risk Watch</span>
         </span>
     </a>
@@ -34,15 +34,20 @@
                     </ul>
                 </li>
 
+                <li>
+                    <img src="kipsrm-web/assets/img/mimos_logo.jpg" class="navbar-logo">
+                    <img src="kipsrm-web/assets/img/nagaoka_logo.jpg" class="navbar-logo">
+                </li>
+
             </ul>
         </div>
-        
+
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
                 <i class="fa fa-search"></i>
             </button>
         </div>
-        
+
         <div class="collapse navbar-collapse" id="navbar-collapse">
             <div class="col-sm-6 col-md-offset-2" style="display:inline-block">
                 <div class="navbar-search">
@@ -64,16 +69,17 @@
                 </div>
             </div>
 
+            <!--
             <div class="navbar-custom-menu">
                 <ul class="nav navbar-nav">
-
                     <li>
                         <img src="kipsrm-web/assets/img/mimos_logo.jpg" class="navbar-logo">
                         <img src="kipsrm-web/assets/img/nagaoka_logo.jpg" class="navbar-logo">
                     </li>
                 </ul>
             </div>
+            -->
         </div>
-        
+
     </nav>
 </header>
