--- a/kipsrm-web/app/components/incidents/nite/records.html
+++ b/kipsrm-web/app/components/incidents/nite/records.html
@@ -6,6 +6,7 @@
             <a href="#!/incidents/nite/records" class="btn btn-bitbucket btn-social-icon" title="Records"><i class="fa fa-list"></i></a>
             <a href="#!/incidents/nite/charts" class="btn btn-primary btn-social-icon" title="Charts"><i class="fa fa-pie-chart"></i></a>
             <a href="#!/incidents/nite/gis" class="btn btn-primary btn-social-icon" title="GIS"><i class="fa fa-map-marker"></i></a>
+            <a href="#!/incidents/nite/iidf" class="btn btn-primary btn-social-icon" title="IIDF Analysis"><i class="fa fa-tasks"></i></a>
             
             <p></p>
 
