--- a/kipsrm-web/app/components/incidents/nite/charts.html
+++ b/kipsrm-web/app/components/incidents/nite/charts.html
@@ -2,20 +2,19 @@
     <!-- Charts -->
     <div class="row">
         <div class="col-md-12">
-            
             <a href="#!/incidents/nite/records" class="btn btn-primary btn-social-icon" title="Records"><i class="fa fa-list"></i></a>
-            <a href="#!/incidents/nite/charts" class="btn btn-bitbucket btn-social-icon" title="Charts"><i class="fa fa-pie-chart"></i></a>
-            <a href="#!/incidents/nite/gis" class="btn btn-primary btn-social-icon" title="GIS"><i class="fa fa-map-marker"></i></a>
+            <a href="#!/incidents/nite/charts" class="btn btn-primary btn-social-icon" title="Charts"><i class="fa fa-pie-chart"></i></a>
             <a href="#!/incidents/nite/iidf" class="btn btn-primary btn-social-icon" title="IIDF Analysis"><i class="fa fa-tasks"></i></a>
-            
+            <a href="#!/incidents/nite/gis" class="btn btn-primary btn-social-icon" title="GIS"><i class="fa fa-map-marker"></i></a>
+            <a href="#!/incidents/nite/heatmap" class="btn btn-primary btn-social-icon" title="Heatmap"><i class="fa fa-map-marker"></i></a>
+            <a href="#!/incidents/nite/event" class="btn btn-primary btn-social-icon" title="Event"><i class="fa fa-calendar"></i></a>
+            <a href="#!/incidents/nite/spider" class="btn btn-primary btn-social-icon" title="Spider"><i class="fa fa-bullseye"></i></a>
             <p></p>
-            
             <div class="box box-solid">
                 <div class="box-header with-border">
                     <h3 class="box-title"><strong>Top 10 by Category</strong></h3>
                 </div>
                 <div class="box-body">
-
                     <div class="col-md-6 text-center">
                         <div class="box box-primary box-solid">
                             <div class="box-body">
@@ -27,7 +26,6 @@
                             </div>
                         </div>
                     </div>
-                    
                     <div class="col-md-6 text-center">
                         <div class="box box-primary box-solid">
                             <div class="box-body">
@@ -39,7 +37,6 @@
                             </div>
                         </div>
                     </div>
-
                     <!--
                     <div class="col-md-6 text-center">
                         <div class="box box-primary box-solid">
@@ -54,7 +51,6 @@
                         </div>
                     </div>
                     -->
-                    
                     <div class="col-md-5ths text-center">
                         <div class="box box-primary box-solid">
                             <div class="box-body">
@@ -66,7 +62,6 @@
                             </div>
                         </div>
                     </div>
-
                     <!--
                     <div class="col-md-5ths text-center">
                         <div class="box box-primary box-solid">
@@ -80,7 +75,6 @@
                         </div>
                     </div>
                     -->
-
                     <div class="col-md-5ths text-center">
                         <div class="box box-primary box-solid">
                             <div class="box-body">
@@ -92,7 +86,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="col-md-5ths text-center">
                         <div class="box box-primary box-solid">
                             <div class="box-body">
@@ -104,7 +97,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="col-md-5ths text-center">
                         <div class="box box-primary box-solid">
                             <div class="box-body">
@@ -116,7 +108,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="col-md-5ths text-center">
                         <div class="box box-primary box-solid">
                             <div class="box-body">
@@ -128,7 +119,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="col-md-5ths text-center">
                         <div class="box box-primary box-solid">
                             <div class="box-body">
@@ -140,7 +130,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="col-md-5ths text-center">
                         <div class="box box-primary box-solid">
                             <div class="box-body">
@@ -152,7 +141,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="col-md-5ths text-center">
                         <div class="box box-primary box-solid">
                             <div class="box-body">
@@ -164,7 +152,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="col-md-5ths text-center">
                         <div class="box box-primary box-solid">
                             <div class="box-body">
@@ -176,7 +163,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="col-md-5ths text-center">
                         <div class="box box-primary box-solid">
                             <div class="box-body">
@@ -188,7 +174,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="col-md-5ths text-center">
                         <div class="box box-primary box-solid">
                             <div class="box-body">
@@ -200,7 +185,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="col-md-5ths text-center">
                         <div class="box box-primary box-solid">
                             <div class="box-body">
@@ -212,7 +196,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="col-md-5ths text-center">
                         <div class="box box-primary box-solid">
                             <div class="box-body">
@@ -224,7 +207,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="col-md-5ths text-center">
                         <div class="box box-primary box-solid">
                             <div class="box-body">
@@ -236,7 +218,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="col-md-5ths text-center">
                         <div class="box box-primary box-solid">
                             <div class="box-body">
@@ -248,7 +229,6 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
