--- a/kipsrm-web/app/components/incidents/nite/iidf.html
+++ b/kipsrm-web/app/components/incidents/nite/iidf.html
@@ -1,84 +1,58 @@
 <section class="content">
-
     <div class="row">
         <div class="col-md-12">
-
-            <a href="#!/incidents/nite/records" class="btn btn-primary btn-social-icon" title="Records"><i class="fa fa-list"></i></a>
+             <a href="#!/incidents/nite/records" class="btn btn-primary btn-social-icon" title="Records"><i class="fa fa-list"></i></a>
             <a href="#!/incidents/nite/charts" class="btn btn-primary btn-social-icon" title="Charts"><i class="fa fa-pie-chart"></i></a>
+            <a href="#!/incidents/nite/iidf" class="btn btn-primary btn-social-icon" title="IIDF Analysis"><i class="fa fa-tasks"></i></a>
             <a href="#!/incidents/nite/gis" class="btn btn-primary btn-social-icon" title="GIS"><i class="fa fa-map-marker"></i></a>
-            <a href="#!/incidents/nite/iidf" class="btn btn-bitbucket btn-social-icon" title="IIDF Analysis"><i class="fa fa-tasks"></i></a>
-
+            <a href="#!/incidents/nite/heatmap" class="btn btn-primary btn-social-icon" title="Heatmap"><i class="fa fa-map-marker"></i></a>
+            <a href="#!/incidents/nite/event" class="btn btn-primary btn-social-icon" title="Event"><i class="fa fa-calendar"></i></a>
+            <a href="#!/incidents/nite/spider" class="btn btn-primary btn-social-icon" title="Spider"><i class="fa fa-bullseye"></i></a>
             <p></p>
         </div>
     </div>
-
     <div class="row text-center">
         <div class="col-md-10 col-md-offset-1">
-
             <div class="box box-solid">
                 <div class="box-body">
-
                     <div id="iidfHm">Loading...</div>
-
                 </div>
             </div>
-
             <div class="box box-solid">
                 <div class="box-body">
-
                     <div id="iidfHo" style="height: 1000px;">Loading...</div>
-
                 </div>
             </div>
-
             <div class="box box-solid">
                 <div class="box-body">
-
                     <div id="iidfHmat">Loading...</div>
-
                 </div>
             </div>
-
             <div class="box box-solid">
                 <div class="box-body">
-
                     <div id="iidfHmec">Loading...</div>
-
                 </div>
             </div>
-
             <div class="box box-solid">
                 <div class="box-body">
-
                     <div id="iidfHact">Loading...</div>
-
                 </div>
             </div>
-
             <div class="box box-solid">
                 <div class="box-body">
-
                     <div class="col-md-12" style="content:url(kipsrm-web/assets/img/iidf_analysis/1.png);"></div>
-
                 </div>
             </div>
-
             <div class="box box-solid">
                 <div class="box-body">
-
                     <div class="col-md-12" style="content:url(kipsrm-web/assets/img/iidf_analysis/2.jpg);"></div>
-
                 </div>
             </div>
-
             <div class="box box-solid">
                 <div class="box-body">
-
                     <div class="col-md-12" style="content:url(kipsrm-web/assets/img/iidf_analysis/3.png);"></div>
-
                 </div>
             </div>
-
         </div>
     </div>
 </section>
