--- a/kipsrm-web/app/components/incidents/nite/iidf.html
+++ b/kipsrm-web/app/components/incidents/nite/iidf.html
@@ -1,7 +1,7 @@
 <section class="content">
     <div class="row">
         <div class="col-md-12">
-             <a href="#!/incidents/nite/records" class="btn btn-primary btn-social-icon" title="Records"><i class="fa fa-list"></i></a>
+            <a href="#!/incidents/nite/records" class="btn btn-primary btn-social-icon" title="Records"><i class="fa fa-list"></i></a>
             <a href="#!/incidents/nite/charts" class="btn btn-primary btn-social-icon" title="Charts"><i class="fa fa-pie-chart"></i></a>
             <a href="#!/incidents/nite/iidf" class="btn btn-primary btn-social-icon" title="IIDF Analysis"><i class="fa fa-tasks"></i></a>
             <a href="#!/incidents/nite/gis" class="btn btn-primary btn-social-icon" title="GIS"><i class="fa fa-map-marker"></i></a>
@@ -13,45 +13,112 @@
     </div>
     <div class="row text-center">
         <div class="col-md-10 col-md-offset-1">
-            <div class="box box-solid">
+
+            <div class="box box-solid" ng-show="showPane=='iidfHm'">
                 <div class="box-body">
+
+                    <a ng-class="showPane=='iidfHm' ? 'btn-bitbucket' : btn-primary" class="btn btn-primary" ng-click="showPane='iidfHm'">Hazard vs Motion</a>
+                    <a ng-class="showPane=='iidfHo' ? 'btn-bitbucket' : btn-primary" class="btn btn-primary" ng-click="showPane='iidfHo'">Hazard vs. Object</a>
+                    <a ng-class="showPane=='iidfHmat' ? 'btn-bitbucket' : btn-primary" class="btn btn-primary" ng-click="showPane='iidfHmat'">Hazard vs. Material</a>
+                    <a ng-class="showPane=='iidfHmec' ? 'btn-bitbucket' : btn-primary" class="btn btn-primary" ng-click="showPane='iidfHmec'">Hazard vs. Mechanism</a>
+                    <a ng-class="showPane=='iidfHact' ? 'btn-bitbucket' : btn-primary" class="btn btn-primary" ng-click="showPane='iidfHact'">Hazard vs. Activity</a>
+                    <a ng-class="showPane=='iidfAnalysis' ? 'btn-bitbucket' : btn-primary" class="btn btn-primary" ng-click="showPane='iidfAnalysis'">Analysis</a>
+
+                    <p></p>
+
                     <div id="iidfHm">Loading...</div>
                 </div>
             </div>
-            <div class="box box-solid">
+
+            <div class="box box-solid" ng-show="showPane=='iidfHo'">
                 <div class="box-body">
+
+                    <a ng-class="showPane=='iidfHm' ? 'btn-bitbucket' : btn-primary" class="btn btn-primary" ng-click="showPane='iidfHm'">Hazard vs Motion</a>
+                    <a ng-class="showPane=='iidfHo' ? 'btn-bitbucket' : btn-primary" class="btn btn-primary" ng-click="showPane='iidfHo'">Hazard vs. Object</a>
+                    <a ng-class="showPane=='iidfHmat' ? 'btn-bitbucket' : btn-primary" class="btn btn-primary" ng-click="showPane='iidfHmat'">Hazard vs. Material</a>
+                    <a ng-class="showPane=='iidfHmec' ? 'btn-bitbucket' : btn-primary" class="btn btn-primary" ng-click="showPane='iidfHmec'">Hazard vs. Mechanism</a>
+                    <a ng-class="showPane=='iidfHact' ? 'btn-bitbucket' : btn-primary" class="btn btn-primary" ng-click="showPane='iidfHact'">Hazard vs. Activity</a>
+                    <a ng-class="showPane=='iidfAnalysis' ? 'btn-bitbucket' : btn-primary" class="btn btn-primary" ng-click="showPane='iidfAnalysis'">Analysis</a>
+
+                    <p></p>
+
+
                     <div id="iidfHo" style="height: 1000px;">Loading...</div>
                 </div>
             </div>
-            <div class="box box-solid">
+
+            <div class="box box-solid" ng-show="showPane=='iidfHmat'">
                 <div class="box-body">
+
+                    <a ng-class="showPane=='iidfHm' ? 'btn-bitbucket' : btn-primary" class="btn btn-primary" ng-click="showPane='iidfHm'">Hazard vs Motion</a>
+                    <a ng-class="showPane=='iidfHo' ? 'btn-bitbucket' : btn-primary" class="btn btn-primary" ng-click="showPane='iidfHo'">Hazard vs. Object</a>
+                    <a ng-class="showPane=='iidfHmat' ? 'btn-bitbucket' : btn-primary" class="btn btn-primary" ng-click="showPane='iidfHmat'">Hazard vs. Material</a>
+                    <a ng-class="showPane=='iidfHmec' ? 'btn-bitbucket' : btn-primary" class="btn btn-primary" ng-click="showPane='iidfHmec'">Hazard vs. Mechanism</a>
+                    <a ng-class="showPane=='iidfHact' ? 'btn-bitbucket' : btn-primary" class="btn btn-primary" ng-click="showPane='iidfHact'">Hazard vs. Activity</a>
+                    <a ng-class="showPane=='iidfAnalysis' ? 'btn-bitbucket' : btn-primary" class="btn btn-primary" ng-click="showPane='iidfAnalysis'">Analysis</a>
+
+                    <p></p>
+
                     <div id="iidfHmat">Loading...</div>
                 </div>
             </div>
-            <div class="box box-solid">
+
+            <div class="box box-solid" ng-show="showPane=='iidfHmec'">
                 <div class="box-body">
+
+                    <a ng-class="showPane=='iidfHm' ? 'btn-bitbucket' : btn-primary" class="btn btn-primary" ng-click="showPane='iidfHm'">Hazard vs Motion</a>
+                    <a ng-class="showPane=='iidfHo' ? 'btn-bitbucket' : btn-primary" class="btn btn-primary" ng-click="showPane='iidfHo'">Hazard vs. Object</a>
+                    <a ng-class="showPane=='iidfHmat' ? 'btn-bitbucket' : btn-primary" class="btn btn-primary" ng-click="showPane='iidfHmat'">Hazard vs. Material</a>
+                    <a ng-class="showPane=='iidfHmec' ? 'btn-bitbucket' : btn-primary" class="btn btn-primary" ng-click="showPane='iidfHmec'">Hazard vs. Mechanism</a>
+                    <a ng-class="showPane=='iidfHact' ? 'btn-bitbucket' : btn-primary" class="btn btn-primary" ng-click="showPane='iidfHact'">Hazard vs. Activity</a>
+                    <a ng-class="showPane=='iidfAnalysis' ? 'btn-bitbucket' : btn-primary" class="btn btn-primary" ng-click="showPane='iidfAnalysis'">Analysis</a>
+
+                    <p></p>
+
+
                     <div id="iidfHmec">Loading...</div>
                 </div>
             </div>
-            <div class="box box-solid">
+
+            <div class="box box-solid" ng-show="showPane=='iidfHact'">
                 <div class="box-body">
+
+                    <a ng-class="showPane=='iidfHm' ? 'btn-bitbucket' : btn-primary" class="btn btn-primary" ng-click="showPane='iidfHm'">Hazard vs Motion</a>
+                    <a ng-class="showPane=='iidfHo' ? 'btn-bitbucket' : btn-primary" class="btn btn-primary" ng-click="showPane='iidfHo'">Hazard vs. Object</a>
+                    <a ng-class="showPane=='iidfHmat' ? 'btn-bitbucket' : btn-primary" class="btn btn-primary" ng-click="showPane='iidfHmat'">Hazard vs. Material</a>
+                    <a ng-class="showPane=='iidfHmec' ? 'btn-bitbucket' : btn-primary" class="btn btn-primary" ng-click="showPane='iidfHmec'">Hazard vs. Mechanism</a>
+                    <a ng-class="showPane=='iidfHact' ? 'btn-bitbucket' : btn-primary" class="btn btn-primary" ng-click="showPane='iidfHact'">Hazard vs. Activity</a>
+                    <a ng-class="showPane=='iidfAnalysis' ? 'btn-bitbucket' : btn-primary" class="btn btn-primary" ng-click="showPane='iidfAnalysis'">Analysis</a>
+                    <p></p>
+
+
                     <div id="iidfHact">Loading...</div>
                 </div>
             </div>
-            <div class="box box-solid">
+
+            <div class="box box-solid" ng-show="showPane=='iidfAnalysis'">
                 <div class="box-body">
+
+                    <a ng-class="showPane=='iidfHm' ? 'btn-bitbucket' : btn-primary" class="btn btn-primary" ng-click="showPane='iidfHm'">Hazard vs Motion</a>
+                    <a ng-class="showPane=='iidfHo' ? 'btn-bitbucket' : btn-primary" class="btn btn-primary" ng-click="showPane='iidfHo'">Hazard vs. Object</a>
+                    <a ng-class="showPane=='iidfHmat' ? 'btn-bitbucket' : btn-primary" class="btn btn-primary" ng-click="showPane='iidfHmat'">Hazard vs. Material</a>
+                    <a ng-class="showPane=='iidfHmec' ? 'btn-bitbucket' : btn-primary" class="btn btn-primary" ng-click="showPane='iidfHmec'">Hazard vs. Mechanism</a>
+                    <a ng-class="showPane=='iidfHact' ? 'btn-bitbucket' : btn-primary" class="btn btn-primary" ng-click="showPane='iidfHact'">Hazard vs. Activity</a>
+                    <a ng-class="showPane=='iidfAnalysis' ? 'btn-bitbucket' : btn-primary" class="btn btn-primary" ng-click="showPane='iidfAnalysis'">Analysis</a>
+
+                    <p></p>
+
                     <div class="col-md-12" style="content:url(kipsrm-web/assets/img/iidf_analysis/1.png);"></div>
-                </div>
-            </div>
-            <div class="box box-solid">
-                <div class="box-body">
+
+                    <br>
+
                     <div class="col-md-12" style="content:url(kipsrm-web/assets/img/iidf_analysis/2.jpg);"></div>
-                </div>
-            </div>
-            <div class="box box-solid">
-                <div class="box-body">
+
+                    <br>
+
                     <div class="col-md-12" style="content:url(kipsrm-web/assets/img/iidf_analysis/3.png);"></div>
                 </div>
+
             </div>
         </div>
     </div>
