Add translations for sidebar items

--- a/kipsrm-web/app/components/sidebar/sidebar.html
+++ b/kipsrm-web/app/components/sidebar/sidebar.html
@@ -8,7 +8,7 @@
         <!-- Incidents -->
         <li class="treeview">
             <a href="" class="sidebar-item">
-                <i class="fa fa-exclamation-triangle"></i> <span>Incidents</span>
+                <i class="fa fa-exclamation-triangle"></i> <span>{{'incidents' | translate}}</span>
                 <span class="pull-right-container">
               <i class="fa fa-angle-left pull-right"></i>
             </span>
@@ -24,7 +24,7 @@
         <!-- Recalls -->
         <li class="treeview">
             <a href="" class="sidebar-item">
-                <i class="fa fa-repeat"></i> <span>Recalls</span>
+                <i class="fa fa-repeat"></i> <span>{{'recalls' | translate}}</span>
                 <span class="pull-right-container">
               <i class="fa fa-angle-left pull-right"></i>
             </span>
