--- a/kipsrm-web/app/components/incidents/nite/event.html
+++ b/kipsrm-web/app/components/incidents/nite/event.html
@@ -5,8 +5,8 @@
             <a href="#!/incidents/nite/charts" class="btn btn-primary btn-social-icon" title="Charts"><i class="fa fa-pie-chart"></i></a>
             <a href="#!/incidents/nite/iidf" class="btn btn-primary btn-social-icon" title="IIDF Analysis"><i class="fa fa-tasks"></i></a>
             <a href="#!/incidents/nite/gis" class="btn btn-primary btn-social-icon" title="GIS"><i class="fa fa-map-marker"></i></a>
-            <a href="#!/incidents/nite/heatmap" class="btn btn-primary btn-social-icon" title="Heatmap"><i class="fa fa-map-marker"></i></a>
-            <a href="#!/incidents/nite/event" class="btn btn-primary btn-social-icon" title="Event"><i class="fa fa-calendar"></i></a>
+            <a href="#!/incidents/nite/heatmap" class="btn btn-primary btn-social-icon" title="Heatmap"><i class="fa fa-map"></i></a>
+            <a href="#!/incidents/nite/event" class="btn btn-bitbucket btn-social-icon" title="Event"><i class="fa fa-calendar"></i></a>
             <a href="#!/incidents/nite/spider" class="btn btn-primary btn-social-icon" title="Spider"><i class="fa fa-bullseye"></i></a>
             <p></p>
             <div class="box">
