--- a/kipsrm-web/app/components/incidents/nite/iidf.html
+++ b/kipsrm-web/app/components/incidents/nite/iidf.html
@@ -3,9 +3,9 @@
         <div class="col-md-12">
             <a href="#!/incidents/nite/records" class="btn btn-primary btn-social-icon" title="Records"><i class="fa fa-list"></i></a>
             <a href="#!/incidents/nite/charts" class="btn btn-primary btn-social-icon" title="Charts"><i class="fa fa-pie-chart"></i></a>
-            <a href="#!/incidents/nite/iidf" class="btn btn-primary btn-social-icon" title="IIDF Analysis"><i class="fa fa-tasks"></i></a>
+            <a href="#!/incidents/nite/iidf" class="btn btn-bitbucket btn-social-icon" title="IIDF Analysis"><i class="fa fa-tasks"></i></a>
             <a href="#!/incidents/nite/gis" class="btn btn-primary btn-social-icon" title="GIS"><i class="fa fa-map-marker"></i></a>
-            <a href="#!/incidents/nite/heatmap" class="btn btn-primary btn-social-icon" title="Heatmap"><i class="fa fa-map-marker"></i></a>
+            <a href="#!/incidents/nite/heatmap" class="btn btn-primary btn-social-icon" title="Heatmap"><i class="fa fa-map"></i></a>
             <a href="#!/incidents/nite/event" class="btn btn-primary btn-social-icon" title="Event"><i class="fa fa-calendar"></i></a>
             <a href="#!/incidents/nite/spider" class="btn btn-primary btn-social-icon" title="Spider"><i class="fa fa-bullseye"></i></a>
             <p></p>
