--- a/kipsrm-web/app/components/recalls/rapex/wordcloud.html
+++ b/kipsrm-web/app/components/recalls/rapex/wordcloud.html
@@ -35,7 +35,7 @@
                         </div>
                         <div class="col-md-9">
                             <div id="wordsCloud">
-                                <word-cloud words="words" width="width" height="height" padding="8" on-click="wordClicked">
+                                <word-cloud words="words" width="width" height="height" padding="8" on-click="wordClickedChem">
                                 </word-cloud>
                             </div>
                         </div>
